some more coding samples
some more coding samples